Fixed horizontal scrolling issue

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -71,8 +71,8 @@
         content: "Andy";
         position: absolute;
         bottom: 0;
-        left: 50%;
-        transform: translate(-26%, 50%);
+        right: 0;
+        transform: translate(0, 50%);
         pointer-events: none;
 
         @include onDesktop {
